-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
A few build issues with gnilnd on SUSE 15 SP2
[ 635s] In file included from /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/libcfs/include/libcfs/libcfs.h:45:0,
[ 635s] from /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/include/lnet/lib-lnet.h:42,
[ 635s] from /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.h:64,
[ 635s] from /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c:25:
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c: In function 'kgnilnd_dev_fini':
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/libcfs/include/libcfs/libcfs_private.h:90:6: error: format '%ld' expects argument of type 'long int', but argument 5 has type 's64 {aka long long int}' [-Werror=format=]
[ 635s] "ASSERTION( %s ) failed: " fmt, #cond, \
[ 635s] ^
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c:2135:2: note: in expansion of macro 'LASSERTF'
[ 635s] LASSERTF(atomic_read(&dev->gnd_n_mdd) == 0 &&
[ 635s] ^~~~~~~~
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c:2138:26: note: format string is defined here
[ 635s] "%d SMSG mappings of %ld bytes still mapped or held %d\n",
[ 635s] ~~^
[ 635s] %lld
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c: In function 'kgnilnd_base_startup':
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c:2231:2: error: implicit declaration of function 'do_gettimeofday'; did you mean 'do_settimeofday64'? [-Werror=implicit-function-declaration]
[ 635s] do_gettimeofday(&tv);
[ 635s] ^~~~~~~~~~~~~~~
[ 635s] do_settimeofday64
[ 635s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.12.4.2_cray_181_g77665be/lnet/klnds/gnilnd/gnilnd.c:2279:3: error: implicit declaration of function 'setup_timer'; did you mean 'sk_stop_timer'? [-Werror=implicit-function-declaration]
[ 635s] setup_timer(&dev->gnd_rdmaq_timer, kgnilnd_schedule_device_timer,
[ 635s] ^~~~~~~~~~~
[ 635s] sk_stop_timer